--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>SBNet: A Comprehensive Dataset of Bangladeshi Sign Board</title>
+    <title>BDSL49</title>
     <meta
         content=""
         name="description" />
 
-    <meta content="uap,uap cse,asia pacific cse,asia pacific computer science" name="keywords" />
+    <meta content="" name="keywords" />
 
     <!-- Favicons -->
     <link href="assets/img/favicon.png" rel="icon" />
@@ -47,7 +47,7 @@
     <!-- -----------------------Topper------------------------ -->
     <div>
         <div class="topper" style="text-align: center; text-align: center;">
-            <h1>SBNet: A Comprehensive Dataset of Bangladeshi Sign Board</h1>
+            <h1>BDSL49: A Comprehensive Dataset of Bangladeshi Sign Language</h1>
         </div>
     </div>
     <!-- -----------------------Topper------------------------ -->
